# remotezip-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release.sh  remotezip_server.py
.github/workflows/: release.yml
